Fix z-index when scrolling and make ascrolling faster when dragging

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -50,6 +50,7 @@ $max-page-width: 1200px;
 /* z-Index */
 $bottom-bar-z-index: 500;
 $logged-out-nav-z-index: 500;
+$mobile-top-bar: 2000;
 
 /* Colours */
 $colour-primary: #835aff;
