--- a/src/components/objectives/objective-item/objective-item.component.scss
+++ b/src/components/objectives/objective-item/objective-item.component.scss
@@ -19,3 +19,7 @@
   height: variables.$objective-item-height;
   padding: variables.$spacing-mid;
 }
+
+.KeyResultDragItem {
+  z-index: 1 !important;
+}
